# Log4j2_Log_Analyzer

./: .gitignore  README.md  pyproject.toml  run.py
frontend/: index.html
frontend/css/: components.css  log-viewer.css  main.css
frontend/js/: api.js  app.js  format-manager.js  log-manager.js  log-viewer.js  project-manager.js  repo-manager.js
frontend/js/components/: modal.js  toast.js
server/: app.py  config.py
server/api/: files.py  formats.py  logs.py  parsing.py  projects.py  repos.py  stacktrace.py
server/core/: format_manager.py  git_client.py  log_indexer.py  log_parser.py  pattern_compiler.py  project_manager.py  repo_registry.py  repo_resolver.py  repo_scanner.py  stack_trace.py
server/data/: features.json  jar-overrides.json  repos.json
server/models/: log_entry.py  log_format.py  project.py  repo.py
tests/: conftest.py  test_bugfixes.py  test_format_types.py  test_log_parser.py  test_logs.py  test_parsing_api.py  test_projects.py  test_repo_resolver.py  test_repos_api.py  test_stack_trace.py
